    - [space-age] Recipes are now using new crafting category from MK1-5 and 6-10 requires assembly 2 or electromagnetic-plant.
    - Achievement text make more sense.
    - Start of base game towards PAR will now have crafting triggers over science research.
  Bugfixes:
    - Temp fix for compatibility recipes.
    - Crash with AAI industries.
    - Bobs tech name crash.
    - Bobs tech soft lock bob-carbon. in combination with Alt_Chemical_Processing.
    - Fixed many spelling errors across the Changelog.
---------------------------------------------------------------------------------------------------
Version: 0.3.18
Date: 12.03.2025
  Features:
    - Repeatable migrations.
  Changes:
    - Moved disable function: Filter, Recipe, Tech. To Chemical mod.
    - Removed Redundant settings.
    - Improved tips description on some mods.
  Modding:
    - Fixed missing item in roboport recipe (boblogiostics).
    - Added item to armour recipes (bobplate, bobenemies).
    - bob- Prefix Crashing with beta (11.03.25).
  Bugfixes:
    - Crashes with bobs in general. (11.03.25).
  Info:
    - Mistakenly deleted & reuploaded. 21.05.2025
---------------------------------------------------------------------------------------------------
Version: 0.3.17
Date: 04.03.2025
  Features:
    - Repeatable migrations.
    - Added all the old chat popups to tips & tricks. some text changes may happen as the mods updates.  
  Changes:
    - Achivement name change [Surviving planet destruction] --> [Leviathan]
    - Control stage code are deleted, no longer in use/needed.
    - Deleted setting(s) regarding the old chat popup.
    - Bobs & [space-age] bridge is moved to Alt Chemical Processing. 
    - If you are currently playing Bobs and PA&R please use that mod to restore the merge of items in recipes.